# AskeeDS

./: .gitignore  BACKLOG.md  CHANGELOG.md  CREDITS_LOGO.txt  DESIGNER_SIZING_WORKFLOW.md  GUIDE.md  INTEGRATING.md  LICENSE  MIGRATION-PLAN.md  README.md  REFERENCE.md  ROADMAP.md  STAKEHOLDER_REQUESTS.md  package.json  poc_renderer.py  pyproject.toml
_archive/: README.md
askee_ds/: __init__.py  banner.py  box_drawing.py  cli.py  components.py  composer.py  decorations.py  layout.py  loader.py  maps.py  output.py  pyglet_renderer.py  renderer.py  sizing.py  theme.py  validator.py
askee_ds.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
components/: _schema.yaml
decorations/: catalog.yaml
design/: README.md  readme-examples.json  v1-final-pass-plan.md
examples/: all_components.py  full_screen.py  map_preview.py  quick_start.py  textual_app.py
maps/: dungeon_room.txt
screens/: _schema.yaml
scripts/: figlet_logo_preview.py  generate_credits_logo.py  git-commit.sh  setup-local-git.sh  setup-venv.sh
tests/: __init__.py  conftest.py  test_adapters.py  test_cli.py  test_composer.py  test_framework.py  test_interaction.py  test_layout.py  test_loader.py  test_package.py  test_proving.py  test_pyglet_renderer.py  test_renderer.py  test_screens.py  test_sizing.py  test_snapshots.py  test_theme.py  test_themes.py  test_validator.py
themes/: dark.yaml  experimental.yaml  high-contrast.yaml  light.yaml
tokens/: box-drawing.yaml  colors.yaml  sizing.yaml  typography.yaml
tools/: add_component_status.py  component_visual_test.py  component_visual_test.tcss  figlet_approved_fonts.txt  migrate.py  parse_components.py  parse_decorations.py  parse_maps.py  render_demo.py  test_parse_maps.py  (+5 more)
(+114 files in other folders)
