[project]
name = "askee-ds"
version = "0.2.0"
description = "ASCII design system and component framework for TUI games."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Spencer Goldade" }
]
dependencies = [
  "pyyaml>=6.0.0",
]

[project.optional-dependencies]
rich = ["rich>=13.0.0"]
textual = ["textual>=0.47.0", "rich>=13.0.0"]
banner = ["pyfiglet>=0.8.0"]
dev = ["pytest>=7.0.0"]

[project.scripts]
askee-ds = "askee_ds.cli:main"

[tool.setuptools]
packages = ["askee_ds", "askee_ds.adapters"]
